[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Client.tscn" type="PackedScene" id=2]
[ext_resource path="res://Welcome.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Client" parent="." instance=ExtResource( 2 )]

[node name="StatusLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "You are NOT connected."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeScreen" parent="." instance=ExtResource( 3 )]

[node name="Darkener" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.901961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectFailurePopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -65.5
margin_right = 145.0
margin_bottom = 65.5
popup_exclusive = true

[node name="Label" type="Label" parent="ConnectFailurePopup"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 48.0
text = "Cannot connect to the server. Check your internet connection or try again later!"
autowrap = true

[node name="Button" type="Button" parent="ConnectFailurePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5
margin_top = -50.0
margin_right = 23.5
margin_bottom = -25.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="connectionClosed" from="Client" to="." method="clientConnectionClosed"]
[connection signal="connectionEstablished" from="Client" to="." method="clientConnectionEstablished"]
[connection signal="dataReceived" from="Client" to="." method="clientDataReceived"]
[connection signal="entered" from="WelcomeScreen" to="." method="nameEntered"]
[connection signal="button_down" from="ConnectFailurePopup/Button" to="." method="closePopup"]
